# av1tenth_sim

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
av1tenth_sim/: simulator_node.py  visualizer_node.py
av1tenth_sim/sim_utils/: vehicle_sim.py
config/: av1tenth.rviz  params.yaml
launch/: rviz_simulator.launch.py  simulator.launch.py
models/: simple_model.STL  simple_wheel.STL
