<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>av1tenth_sim</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="patrick@todo.todo">patrick</maintainer>
  <license>TODO: License declaration</license>

  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
